Note dialog and thank you translated

--- a/projects/collect/src/assets/i18n/en-US.json
+++ b/projects/collect/src/assets/i18n/en-US.json
@@ -83,5 +83,26 @@
 	"record.button.stop": "Stop",
 	"record.button.upload": "Upload",
 	"record.button.record_again": "Record Again",
-	"record.button.cancel": "Cancel"
+	"record.button.cancel": "Cancel",
+	"thanks.heading": "Thank you for your participation!",
+	"thanks.message.para1": "Thank you for being a part of this! Please share it among your friends and relatives.",
+	"thanks.message.para2": "Follow us at <a href='https://www.facebook.com/coswara.iisc'>Facebook</a> and <a href='https://twitter.com/coswara_iisc'>Twitter</a> to get the latest updates.",
+	"thanks.button.start_new_session": "Start a new session",
+	"thanks.warning.reuse": "The recording device should not be shared with others before cleaning/sanitation.",
+	"thanks.developed_by": "Developed by",
+	"thanks.let_us_know_comments": "Let us know your comments!",
+	"thanks.feedback": "Feedback",
+	"thanks.button.send_feedback": "Send Feedback",
+	"thanks.feedback.complete": "Thank you for your feedback!",
+	"note.title": "Note",
+	"note.para1": "If you are visiting the page from Facebook or Twitter App, you may face difficulty in using microphone. Please open the url below in any of the supported browsers.",
+	"note.supported_browsers": "Supported Browsers",
+	"browsers.chrome": "Chrome",
+	"browsers.safari": "Safari",
+	"browsers.firefox": "Firefox",
+	"device.pc": "PC",
+	"device.mac": "MAC",
+	"device.android": "Android",
+	"device.ios": "iOs",
+	"note.button.dismiss": "Dismiss"
 }
