--- a/projects/collect/src/assets/i18n/hi-IN.json
+++ b/projects/collect/src/assets/i18n/hi-IN.json
@@ -72,5 +72,37 @@
     "record.description.vowel-o": "कहो / ओ \"कूल\" में और बनाए रखने के रूप में जब तक संभव हो /",
     "record.description.counting-normal": "1 से 20 के लिए गणना",
     "record.description.counting-fast": "तेजी से 1 से 20 के लिए गणना",
-    "record.description.done": "भाग लेने के लिए आपको धन्यवाद!"
+    "record.description.done": "भाग लेने के लिए आपको धन्यवाद!",
+    "record.message.initializing": "आरंभ! कृपया प्रतीक्षा कीजिये...",
+ "record.message.uploading": "अपलोड हो रहा है! कृपया प्रतीक्षा कीजिये...",
+ "record.button.start_recording": "रिकॉर्डिंग शुरू",
+ "record.button.stop_recording": "रिकॉर्डिंग शुरू",
+ "record.button.play_sample": "प्ले नमूना",
+ "record.button.stop_playing": "खेलना बंद करो",
+ "record.button.play": "खेल",
+ "record.button.stop": "रुकें",
+ "record.button.upload": "डालना",
+ "record.button.record_again": "रिकॉर्ड फिर से",
+ "record.button.cancel": "रद्द करना",
+ "thanks.heading": "भाग लेने के लिए आपको धन्यवाद!",
+ "thanks.message.para1": "इस का एक हिस्सा होने के लिए धन्यवाद! कृपया इसे अपने दोस्तों और रिश्तेदारों के बीच साझा करें।",
+ "thanks.message.para2": "पर हमारा अनुसरण करें <a href='https://www.facebook.com/coswara.iisc'> फेसबुक </a> और <a href='https://twitter.com/coswara_iisc'> ट्विटर </a> नवीनतम अपडेट प्राप्त करने।",
+ "thanks.button.start_new_session": "एक नया सत्र शुरू",
+ "thanks.warning.reuse": "रिकॉर्डिंग डिवाइस से पहले सफाई / स्वच्छता दूसरों के साथ साझा नहीं किया जाना चाहिए।",
+ "thanks.developed_by": "द्वारा विकसित",
+ "thanks.let_us_know_comments": "हमें अपनी टिप्पणियाँ बताएं!",
+ "thanks.feedback": "प्रतिपुष्टि",
+ "thanks.button.send_feedback": "प्रतिक्रिया भेजें",
+ "thanks.feedback.complete": "आपकी प्रतिक्रिया के लिए आपका धन्यवाद!",
+ "note.title": "ध्यान दें",
+ "note.para1": "आप फेसबुक या ट्विटर App से पेज का दौरा कर रहे हैं, तो आप माइक्रोफोन का उपयोग करने में कठिनाई का सामना कर सकते। कृपया किसी भी समर्थित ब्राउज़र में नीचे यूआरएल को खोलने के।",
+ "note.supported_browsers": "समर्थित ब्राउज़र",
+ "browsers.chrome": "क्रोम",
+ "browsers.safari": "सफारी",
+ "browsers.firefox": "फ़ायरफ़ॉक्स",
+ "device.pc": "पीसी",
+ "device.mac": "मैक",
+ "device.android": "एंड्रॉयड",
+ "device.ios": "आईओएस",
+ "note.button.dismiss": "खारिज" 
 }
