--- a/projects/collect/src/assets/i18n/ta-IN.json
+++ b/projects/collect/src/assets/i18n/ta-IN.json
@@ -1,3 +1,108 @@
 {
-	"app.title": "coswara"
+	"app.title": "coswara",
+	"metadata.title.no_metadata": "நாம் தொடர சில தகவல்கள் தேவை!",
+ "metadata.tabs.disclaimer": "மறுப்பு",
+ "metadata.tabs.metadata": "தகவல்கள்",
+ "metadata.tabs.health_status": "உடல் நலம் நிலைமை",
+ "metadata.disclaimer.para1": "பிற முந்தைய ஆய்வுகளில் பதிவாகும் ஒரு உயர்மட்ட உணர்திறன் கூடிய இந்த ஆய்வு மனித குரலில் இருந்து சுவாசநோய் கண்டறிவதற்கான துல்லியம் உருவாக்குகிறது. நோய் கண்டறிதல், புள்ளியியலில் முக்கியத்துவம் பிறகு பின்னர் இந்த பயன்பாட்டின் பகுதியாக செயல்படுத்தப்படும். இந்த ஆய்வில் பங்கு முற்றிலும் தன்னார்வ அடிப்படையிலானது மற்றும் சேகரித்த தகவலில் தனிப்பட்ட முறையில் அடையாளம் காணக்கூடிய தகவலும் இருக்காது.",
+ "metadata.disclaimer.para2": "முழு பதிவு மற்றும் தகவல்கள் சேகரிப்பு 5 நிமிடங்கள் மட்டுமே ஆகலாம். பதிவின் போது உங்கள் முகத்தில் இருந்து 20 செ.மீ. தொலைவில் உங்கள் சாதனம் வைத்து, ஒரு அமைதியான சூழலில் பதிவு செய்து கொள்ளவும். பதிவு சாதனத்தை சுத்தம் / துப்புரவு செய்யும் முன் மற்றவர்களுடன் பகிர்ந்துகொள்ள கூடாது.",
+ "metadata.disclaimer.para3": "இந்திய அறிவியல் நிறுவனம் நெறிமுறைகள் குழுவின் ஆக்கிரமிப்பு அல்லாத பதிவுகளின் நடைமுறையில் ஒப்புதல் அளித்துள்ளது.",
+ "metadata.disclaimer.para4": "'ஆரம்பி'-ஐ கிளிக் செய்வதன் மூலம் எங்கள் <a href='https://coswara.iisc.ac.in/terms' target='_blank'> விதிமுறைகள் மற்றும் நிபந்தனைகளை </a> ஏற்று, நீங்கள் தகவல் மற்றும் தூண்டிகள் சேகரிப்பு தொடர்வீர்கள்",
+ "metadata.disclaimer.para4.alternate": "நீங்கள் ஏற்று எங்கள் <a href='https://coswara.iisc.ac.in/terms' target='_blank'> வளர்ச்சி நிபந்தனைகளை </a> வேண்டும்",
+ "metadata.disclaimer.para5": "மேலும் விவரங்களுக்கு, தொடர்புகொள்ள : <a href='mailto:sriramg@iisc.ac.in'> sriramg@iisc.ac.in </a>",
+ "metadata.buttons.start": "ஆரம்பி",
+ "metadata.buttons.start_over": "மீண்டும் ஆரம்பி",
+ "metadata.buttons.continue": "தொடரவும்",
+ "metadata.buttons.previous": "முந்தைய",
+ "metadata.buttons.next": "அடுத்தது",
+ "metadata.buttons.submit": "சமர்ப்பிக்கவும்",
+ "forms.label.age": "வயது",
+ "forms.label.gender": "பாலினம்",
+ "forms.label.english_proficient": "நீங்கள் ஆங்கிலத்தில் புலமை பெற்றவரா?",
+ "forms.label.returning_user": "நீங்கள் ஒரு மீண்டும் பயன்படுத்துபவரா?",
+ "forms.label.location": "இருப்பிடம்",
+ "forms.label.country": "நாடு",
+ "forms.label.state": "மாநிலம் / மாகாணம்",
+ "forms.label.locality": "இருப்பிடம் / மாவட்டம்",
+ "forms.label.current_status": "தற்போதைய நிலை",
+ "forms.label.health_conditions": "உடல் நிலை",
+ "forms.errors.required": "தேவையான",
+ "forms.errors.age.valid": "சரியான வயது போல இல்லை",
+ "forms.errors.field_required": "(*) குறிக்கப்பட்ட எல்லா விவரங்கள் அவசியமானது",
+ "forms.options.male": "ஆண்",
+ "forms.options.female": "பெண்",
+ "forms.options.other": "மற்ற",
+ "forms.options.yes": "ஆம்",
+ "forms.options.no": "இல்லை",
+ "forms.option.positive_mild": "எனக்கு Covid 19 வந்துள்ளதாக அறிவிக்கப்பட்டுள்ளது மற்றும் லேசான அறிகுறிகள் தென்படுகின்றன",
+ "forms.option.positive_moderate": "எனக்கு Covid 19 வந்துள்ளதாக அறிவிக்கப்பட்டுள்ளது மற்றும் மிதமான கடுமையான அறிகுறிகள் தென்படுகின்றன",
+ "forms.option.recovered_full": "எனக்கு Covid 19 வந்துள்ளதாக அறிவிக்கப்பட்டுள்ளது பின் முழுமையாக குணமடைந்து விட்டேன்",
+ "forms.option.resp_illness_not_identified": "எனக்கு  முன்பே மற்ற சுவாச நோய்கள் உள்ளன, ஆனால் Covid 19 இதுவரை கண்டறியப்படவில்லை",
+ "forms.option.no_resp_illness_exposed": "எனக்கு எந்த சுவாச நோயும் இல்லை, ஆனால் நான் தொடர்பு மூலம் வைரஸ் தாக்கப்பட்டு இருக்கலாம்",
+ "forms.option.healthy": "எனக்கு எந்த சுவாச நோய்கள் இல்லை",
+ "forms.option.none_of_the_above": "மேலே குறிப்பிட்டவை எதுவுமில்லை",
+ "forms.option.cold": "சளி",
+ "forms.option.cough": "இருமல்",
+ "forms.option.fever": "காய்ச்சல்",
+ "forms.option.pneumonia": "நிமோனியா",
+ "forms.option.loss_of_smell": "வாசனைத்திறன் இழப்பு",
+ "forms.option.smoker": "புகைப்பிடிப்பவர்",
+ "forms.option.asthma": "ஆஸ்துமா",
+ "forms.option.cld": "நாள்பட்ட நுரையீரல் நோய்",
+ "forms.option.ht": "உயர் இரத்த அழுத்தம்",
+ "forms.option.ihd": "ஓட்டத்தடை இதய நோய்",
+ "forms.option.diabetes": "நீரிழிவு நோய்",
+ "record.message.info": "ஒரு அமைதியான சூழலில் இருந்துகொண்டு உங்கள் முகத்தில் இருந்து 20 செ.மீ. தள்ளி உங்கள் சாதனம் வைத்து கொள்ளவும்",
+ "record.title.breathing-shallow": "சுவாசித்தல் (லேசாக)",
+ "record.title.breathing-deep": "சுவாசித்தல் (ஆழ்ந்த)",
+ "record.title.cough-shallow": "இருமல் (லேசாக)",
+ "record.title.cough-heavy": "இருமல் (கடுமையான)",
+ "record.title.vowel-a": "உயிரெழுத்து / எ /",
+ "record.title.vowel-e": "உயிரெழுத்து / இ /",
+ "record.title.vowel-o": "உயிரெழுத்து / ஓ /",
+ "record.title.counting-normal": "எண்ணுதல் (சாதாரண)",
+ "record.title.counting-fast": "எண்ணுதல் (வேகமாக)",
+ "record.title.done": "முடிந்தது",
+ "record.description.breathing-shallow": "வேகமாக 5 முறை சுவாசிக்கவும்",
+ "record.description.breathing-deep": "ஆழமாக 5 முறை சுவாசிக்கவும்",
+ "record.description.cough-shallow": "லேசாக 3 முறை இருமவும்",
+ "record.description.cough-heavy": "ஆழமாக 3 முறை இருமவும்",
+ "record.description.vowel-a": "\"ஏணியின்\" இருக்கும் /ஏ/ என்ற எழுத்தைப்போல முடிந்தவரை நீட்டி உச்சரிக்கவும்",
+ "record.description.vowel-e": "\"ஈசனில்\" இருக்கும் /ஈ/ என்ற எழுத்தைப்போல முடிந்தவரை நீட்டி உச்சரிக்கவும்",
+ "record.description.vowel-o": "\"ஊசியில்\" இருக்கும் /ஊ/ என்ற எழுத்தைப்போல முடிந்தவரை நீட்டி உச்சரிக்கவும்",
+ "record.description.counting-normal": "1 முதல் 20 வரை எண்ணவும்",
+ "record.description.counting-fast": "வேகமாக 1 முதல் 20 வரை எண்ணவும்",
+ "record.description.done": "தங்கள் பங்கேற்புக்கு நன்றி!",
+ "record.message.initializing": "தொடங்குகின்றது! காத்திருக்கவும் ...",
+ "record.message.uploading": "பதிவேற்றுகிறது! காத்திருக்கவும் ...",
+ "record.button.start_recording": "பதிவிட தொடங்கவும்",
+ "record.button.stop_recording": "பதிவிட நிறுத்தவும்",
+ "record.button.play_sample": "பதிவிட்ட மாதிரி இயக்கவும்",
+ "record.button.stop_playing": "இயக்கத்தை நிறுத்து",
+ "record.button.play": "இயக்கு",
+ "record.button.stop": "நிறுத்து",
+ "record.button.upload": "பதிவேற்று",
+ "record.button.record_again": "மீண்டும் பதிவு செய்",
+ "record.button.cancel": "ரத்து செய்",
+ "thanks.heading": "தங்கள் பங்கேற்புக்கு நன்றி!",
+ "thanks.message.para1": "இதில் ஒரு பகுதியாக இருந்ததில் நன்றி! உங்கள் நண்பர்கள் மற்றும் உறவினர்களிடம் பகிர்ந்து கொள்ளவும்.",
+ "thanks.message.para2": "எங்களை பின்பற்றவும் <a href='https://www.facebook.com/coswara.iisc'> பேஸ்புக் </a> மற்றும் <a href='https://twitter.com/coswara_iisc'> ட்விட்டர் </a> சமீபத்திய புதுப்பிப்புகளைப் பெற.",
+ "thanks.button.start_new_session": "புதிய பதிவை தொடங்க",
+ "thanks.warning.reuse": "பதிவு சாதனத்தில் சுத்தம் / துப்புரவு முன் மற்றவர்களுடன் பகிர்ந்து கூடாது.",
+ "thanks.developed_by": "உருவாக்கியது",
+ "thanks.let_us_know_comments": "எங்களுக்கு உங்கள் கருத்துக்களை தெரியப்படுத்துங்கள்!",
+ "thanks.feedback": "கருத்து",
+ "thanks.button.send_feedback": "கருத்தினை அனுப்பவும்",
+ "thanks.feedback.complete": "உங்கள் கருத்துக்கு நன்றி!",
+ "note.title": "குறிப்பு",
+ "note.para1": "நீங்கள் Facebook அல்லது Twitter ஆப் இருந்து இதை பார்த்தால் , நீங்கள் ஒலிவாங்கி பயன்படுத்த சிரமம் அடைவீர். உலாவிகளின் எந்த கீழே URL ஐ திறக்கவும்.",
+ "note.supported_browsers": "ஆதரிக்கப்படும் உலாவிகள்",
+ "browsers.chrome": "குரோம்",
+ "browsers.safari": "சபாரி",
+ "browsers.firefox": "பயர்பாக்ஸ்",
+ "device.pc": "பிசி",
+ "device.mac": "மேக்",
+ "device.android": "அண்ட்ராய்டு",
+ "device.ios": "iOS",
+ "note.button.dismiss": "நிராகரி"
 }
