--- a/projects/collect/src/assets/i18n/hi-IN.json
+++ b/projects/collect/src/assets/i18n/hi-IN.json
@@ -34,9 +34,9 @@
     "forms.options.other": "अन्य",
     "forms.options.yes": "हाँ",
     "forms.options.no": "नहीं",
-    "forms.option.positive_mild": "मैं Covid -19 के साथ पहचान की गई है और हल्के लक्षण है",
-    "forms.option.positive_moderate": "मैं Covid -19 के साथ पहचान की गई है और मध्यम गंभीर लक्षण है",
-    "forms.option.recovered_full": "मैं Covid -19 के साथ पहचान की थी और पूरी तरह से ठीक है",
+    "forms.option.positive_mild": "मुझे Covid -19 के साथ पहचान की गई है और हल्के लक्षण है",
+    "forms.option.positive_moderate": "मुझे Covid -19 के साथ पहचान की गई है और मध्यम गंभीर लक्षण है",
+    "forms.option.recovered_full": "मुझे Covid -19 के साथ पहचान की थी और पूरी तरह से ठीक है",
     "forms.option.resp_illness_not_identified": "मैं अन्य पूर्व मौजूदा सांस की बीमारी है लेकिन Covid -19 के साथ पहचान नहीं की गई",
     "forms.option.no_resp_illness_exposed": "मेरे पास कोई सांस की बीमारी है, लेकिन मैं संपर्क के माध्यम से वायरस के संपर्क में किया गया हो सकता",
     "forms.option.healthy": "मैं किसी भी सांस की बीमारियों की जरूरत नहीं है",
