Fixed the translation json issues

--- a/projects/collect/src/assets/i18n/bn-IN.json
+++ b/projects/collect/src/assets/i18n/bn-IN.json
@@ -67,9 +67,9 @@
     "record.description.breathing-deep": "শ্বাস ফেলা গভীরভাবে 5 বার",
     "record.description.cough-shallow": "কাশি আস্তে 3 বার",
     "record.description.cough-heavy": "কাশি গভীরভাবে 3 বার",
-    "record.description.vowel-a": "বলেন / দ্বারা "নির্মিত হয়েছে" এবং বজায় যতদিন সম্ভব একটি /",
-    "record.description.vowel-e": "বলুন / E / "বীট গাছ" এবং যতদিন সম্ভব টিকিয়ে যেমন",
-    "record.description.vowel-o": "বলুন / O "কুল" এবং বজায় যেমন যতদিন সম্ভব /",
+    "record.description.vowel-a": "বলেন / দ্বারা \"নির্মিত হয়েছে\" এবং বজায় যতদিন সম্ভব একটি /",
+    "record.description.vowel-e": "বলুন / E / \"বীট গাছ\" এবং যতদিন সম্ভব টিকিয়ে যেমন",
+    "record.description.vowel-o": "বলুন / O \"কুল\" এবং বজায় যেমন যতদিন সম্ভব /",
     "record.description.counting-normal": "1 থেকে 20 গণনা",
     "record.description.counting-fast": "দ্রুত 1 থেকে 20 গণনা",
     "record.description.done": "আপনার অংশগ্রহণ করার জন্য আপনাকে ধন্যবাদ!",
