--- a/projects/collect/src/assets/i18n/ka-IN.json
+++ b/projects/collect/src/assets/i18n/ka-IN.json
@@ -67,9 +67,9 @@
     "record.description.breathing-deep": "ಆಳವಾಗಿ 5 ಬಾರಿ ಉಸಿರಾಡುವ",
     "record.description.cough-shallow": "ಕೆಮ್ಮು ಸ್ವಲ್ಪ 3 ಬಾರಿ",
     "record.description.cough-heavy": "ಕೆಮ್ಮು ಆಳವಾಗಿ 3 ಬಾರಿ",
-    "record.description.vowel-a": "ಸೇ / ಎಲ್ಲಿಯವರೆಗೆ ಸಾಧ್ಯವಾದಷ್ಟು "ನಿರ್ಮಿಸಲಾಗುತ್ತದೆ" ಮತ್ತು ಉಳಿಸಿಕೊಳ್ಳಲು ಒಂದು /",
-    "record.description.vowel-e": "ಸೇ / ಇ / "ಬೀಟ್" ಮತ್ತು ಎಲ್ಲಿಯವರೆಗೆ ಸಾಧ್ಯವಾದಷ್ಟು ಉಳಿಸಿಕೊಳ್ಳಲು ಮಾಹಿತಿ",
-    "record.description.vowel-o": "ಸೇ / ಒ ಎಲ್ಲಿಯವರೆಗೆ ಸಾಧ್ಯವಾದಷ್ಟು "ತಂಪಾದ" ಮತ್ತು ಉಳಿಸಿಕೊಳ್ಳಲು ಮಾಹಿತಿ /",
+    "record.description.vowel-a": "ಸೇ / ಎಲ್ಲಿಯವರೆಗೆ ಸಾಧ್ಯವಾದಷ್ಟು \"ನಿರ್ಮಿಸಲಾಗುತ್ತದೆ\" ಮತ್ತು ಉಳಿಸಿಕೊಳ್ಳಲು ಒಂದು /",
+    "record.description.vowel-e": "ಸೇ / ಇ / \"ಬೀಟ್\" ಮತ್ತು ಎಲ್ಲಿಯವರೆಗೆ ಸಾಧ್ಯವಾದಷ್ಟು ಉಳಿಸಿಕೊಳ್ಳಲು ಮಾಹಿತಿ",
+    "record.description.vowel-o": "ಸೇ / ಒ ಎಲ್ಲಿಯವರೆಗೆ ಸಾಧ್ಯವಾದಷ್ಟು \"ತಂಪಾದ\" ಮತ್ತು ಉಳಿಸಿಕೊಳ್ಳಲು ಮಾಹಿತಿ /",
     "record.description.counting-normal": "1 ರಿಂದ 20 ಗೆ ಎಣಿಕೆ",
     "record.description.counting-fast": "ವೇಗವಾಗಿ 1 ರಿಂದ 20 ಕೌಂಟ್",
     "record.description.done": "ನಿಮ್ಮ ಭಾಗವಹಿಸುವಿಕೆ ಧನ್ಯವಾದಗಳು!",
