--- a/projects/collect/src/assets/i18n/ma-IN.json
+++ b/projects/collect/src/assets/i18n/ma-IN.json
@@ -67,9 +67,9 @@
     "record.description.breathing-deep": "श्वास गंभीरपणे 5 वेळा",
     "record.description.cough-shallow": "हळूवारपणे 3 वेळा खोकला",
     "record.description.cough-heavy": "गंभीरपणे 3 वेळा खोकला",
-    "record.description.vowel-a": "सांगा / "केले" आणि मिळवणं म्हणून शक्य तितक्या लांब एक /",
-    "record.description.vowel-e": "सांगा / ई / "बीट" आणि शक्य तितक्या लांब मिळवणं म्हणून",
-    "record.description.vowel-o": "सांगा / O "छान" आणि मिळवणं म्हणून शक्य तितक्या लांब /",
+    "record.description.vowel-a": "सांगा / \"केले\" आणि मिळवणं म्हणून शक्य तितक्या लांब एक /",
+    "record.description.vowel-e": "सांगा / ई / \"बीट\" आणि शक्य तितक्या लांब मिळवणं म्हणून",
+    "record.description.vowel-o": "सांगा / O \"छान\" आणि मिळवणं म्हणून शक्य तितक्या लांब /",
     "record.description.counting-normal": "1 ते 20 मोजा",
     "record.description.counting-fast": "जलद 1 ते 20 मोजा",
     "record.description.done": "आपल्या सहभागाबद्दल धन्यवाद!",
