--- a/projects/collect/src/assets/i18n/ml-IN.json
+++ b/projects/collect/src/assets/i18n/ml-IN.json
@@ -7,9 +7,9 @@
  "metadata.disclaimer.para1": "ഈ പഠനം മനുഷ്യ ശബ്ദം നിന്ന് ശ്വാസകോശ രോഗം തിരിച്ചറിയുന്നതിന് സംവേദനക്ഷമത ഒരു ഉയർന്ന തലത്തിൽ റിപ്പോർട്ട് ചെയ്തിട്ടുള്ള മറ്റ് മുൻ പഠനങ്ങൾ പണിയുന്നു. രോഗം കണ്ടെത്താൻ സ്ഥിതിവിവര പ്രാധാന്യം ഏതെങ്കിലും ഉപകരണങ്ങൾ ഒരു വേറൊരു തീയതിയിൽ ഇത് അപ്ലിക്കേഷൻ ഭാഗമായി നടപ്പാക്കും. ഈ പഠനത്തിൽ പങ്കാളിത്തം അവകാശപ്പെട്ടതാണ് സ്വമേധയാ ആണ് ശേഖരിച്ച വിവരങ്ങൾ വ്യക്തിപരമായി തിരിച്ചറിയുന്ന വിവരങ്ങൾ അടങ്ങിയിരിക്കില്ല.",
  "metadata.disclaimer.para2": "മുഴുവൻ റെക്കോർഡിംഗ്, ഡാറ്റ ശേഖരണം മാത്രം മിനിറ്റ് 5 എടുക്കുന്നതാണ്. റെക്കോർഡിംഗ് സമയത്ത് നിങ്ങളുടെ മുഖം നിന്ന് 20 സെ.മീ ചുറ്റും നിങ്ങളുടെ ഉപകരണം പ്രമാണിച്ചു ശാന്തവും അന്തരീക്ഷത്തിൽ റെക്കോർഡിംഗ് നടത്താൻ ദയവായി. റെക്കോർഡിംഗ് ഉപാധി ക്ലീനിംഗ് / ശുചിത്വം മുമ്പ് മറ്റുള്ളവരുമായി പങ്കിടാൻ പാടില്ല.",
  "metadata.disclaimer.para3": "ഇന്ത്യൻ ഇൻസ്റ്റിറ്റ്യൂട്ട് ഓഫ് സയൻസ് എത്തിക്സ് കമ്മിറ്റിയുടെ നോൺ-മറ്റിനം റെക്കോർഡിംഗുകൾക്കായി നടപടിക്രമം അംഗീകരിച്ചു.",
- "metadata.disclaimer.para4": "ആരംഭിക്കുക ക്ലിക്കുചെയ്തുകൊണ്ട് ഞങ്ങളുടെ <a ഹ്രെഫ്=ഹ്ത്ത്പ്സ്://ചൊസ്വര.ഇഇസ്ച്.അച്.ഇന്/തെര്മ്സ് target='_blank'> എന്ന നിബന്ധനകളും അംഗീകരിച്ചുകൊണ്ടും, ഡാറ്റയും ഉദ്ദീപനങ്ങളുമായുള്ള ശേഖരത്തിലേക്ക് ചെയ്യും </a>",
- "metadata.disclaimer.para4.alternate": "ഞങ്ങളുടെ <a ഹ്രെഫ്=ഹ്ത്ത്പ്സ്://ചൊസ്വര.ഇഇസ്ച്.അച്.ഇന്/തെര്മ്സ് target='_blank'> എന്ന നിബന്ധനകളും വ്യവസ്ഥകളും സ്വീകരിച്ചു </a>",
- "metadata.disclaimer.para5": "എല്ലാ ചോദ്യങ്ങൾക്കും, <a ഹ്രെഫ്=മൈല്തൊ:സ്രിരമ്ഗ്@ഇഇസ്ച്.അച്.ഇന്> sriramg@iisc.ac.in </a> ബന്ധപ്പെടുക",
+ "metadata.disclaimer.para4": "ആരംഭിക്കുക ക്ലിക്കുചെയ്തുകൊണ്ട് ഞങ്ങളുടെ എന്ന <a href='https://coswara.iisc.ac.in/terms' target='_blank'>നിബന്ധനകളും</a> അംഗീകരിച്ചുകൊണ്ടും, ഡാറ്റയും ഉദ്ദീപനങ്ങളുമായുള്ള ശേഖരത്തിലേക്ക് ചെയ്യും ",
+ "metadata.disclaimer.para4.alternate": "ഞങ്ങളുടെ എന്ന <a href='https://coswara.iisc.ac.in/terms' target='_blank'>നിബന്ധനകളും</a> വ്യവസ്ഥകളും സ്വീകരിച്ചു",
+ "metadata.disclaimer.para5": "എല്ലാ ചോദ്യങ്ങൾക്കും, ബന്ധപ്പെടുക: <a href='mailto:sriramg@iisc.ac.in'>sriramg@iisc.ac.in</a>",
  "metadata.buttons.start": "തുടക്കം",
  "metadata.buttons.start_over": "വീണ്ടും ആരംഭിക്കാൻ",
  "metadata.buttons.continue": "തുടരുക",
@@ -67,9 +67,9 @@
  "record.description.breathing-deep": "5 തവണ ശ്വസിക്കുക",
  "record.description.cough-shallow": "3 തവണ ലാറക്ക് ചുമ",
  "record.description.cough-heavy": "3 തവണ ആഴത്തിൽ ചുമ",
- "record.description.vowel-a": "പറയുക / "ചെയ്തു" പോലെ ഒരു / നീണ്ട കഴിയുന്നത്ര നിലനിർത്താൻ",
- "record.description.vowel-e": "പറയുക / ഇ / പോലെ "ബീറ്റ്റൂട്ട്" ൽ നീണ്ട കഴിയുന്നത്ര നിലനിർത്താൻ",
- "record.description.vowel-o": "പറയുക / "തണുത്ത" പോലെ O / നീണ്ട കഴിയുന്നത്ര നിലനിർത്താൻ",
+ "record.description.vowel-a": "പറയുക \"ചെയ്തു\" പോലെ ഒരു നീണ്ട കഴിയുന്നത്ര നിലനിർത്താൻ",
+ "record.description.vowel-e": "പറയുക ഇ പോലെ \"ബീറ്റ്റൂട്ട്\" ൽ നീണ്ട കഴിയുന്നത്ര നിലനിർത്താൻ",
+ "record.description.vowel-o": "പറയുക \"തണുത്ത\" പോലെ O നീണ്ട കഴിയുന്നത്ര നിലനിർത്താൻ",
  "record.description.counting-normal": "1 മുതൽ 20 വരെ എണ്ണം",
  "record.description.counting-fast": "വേഗത്തിൽ 1 മുതൽ 20 വരെ എണ്ണം",
  "record.description.done": "നിങ്ങളുടെ പങ്കാളിത്തം നന്ദി!",
@@ -86,7 +86,7 @@
  "record.button.cancel": "റദ്ദാക്കുക",
  "thanks.heading": "നിങ്ങളുടെ പങ്കാളിത്തം നന്ദി!",
  "thanks.message.para1": "ഇതിന്റെ ഭാഗമായി നന്ദി! നിങ്ങളുടെ സുഹൃത്തുക്കളും ബന്ധുക്കളും ഇടയിൽ അത് പങ്കിടാൻ ദയവായി.",
- "thanks.message.para2": "<a ഹ്രെഫ്=ഹ്ത്ത്പ്സ്://വ്വ്വ്.ഫചെബൊഒക്.ചൊമ്/ചൊസ്വര.ഇഇസ്ച്> പോസ്റ്റ് </a> എന്നതിൽ ഞങ്ങളെ പിന്തുടരുക <a ഹ്രെഫ്=ഹ്ത്ത്പ്സ്://ത്വിത്തെര്.ചൊമ്/ചൊസ്വര_ഇഇസ്ച്> ട്വിറ്റർ </a> ഏറ്റവും പുതിയ അപ്ഡേറ്റുകൾ ലഭിക്കാൻ.",
+ "thanks.message.para2": "<a href='https://www.facebook.com/coswara.iisc'> പോസ്റ്റ് </a> എന്നതിൽ ഞങ്ങളെ പിന്തുടരുക <a href='https://twitter.com/coswara_iisc'>ട്വിറ്റർ</a> ഏറ്റവും പുതിയ അപ്ഡേറ്റുകൾ ലഭിക്കാൻ.",
  "thanks.button.start_new_session": "ഒരു പുതിയ സെഷൻ ആരംഭിക്കുക",
  "thanks.warning.reuse": "റെക്കോർഡിംഗ് ഉപാധി ക്ലീനിംഗ് / ശുചിത്വം മുമ്പ് മറ്റുള്ളവരുമായി പങ്കിടാൻ പാടില്ല.",
  "thanks.developed_by": "വികസിപ്പിച്ചത്",
