--- a/projects/collect/src/assets/i18n/te-IN.json
+++ b/projects/collect/src/assets/i18n/te-IN.json
@@ -67,9 +67,9 @@
     "record.description.breathing-deep": "లోతుగా 5 సార్లు బ్రీత్",
     "record.description.cough-shallow": "స్వల్పంగా 3 సార్లు దగ్గు",
     "record.description.cough-heavy": "లోతుగా 3 సార్లు దగ్గు",
-    "record.description.vowel-a": "సే / సాధ్యమైనంతవరకు "చేసిన" మరియు కొనసాగటానికి ఒక /",
-    "record.description.vowel-e": "సే / ఇ / "దుంప" మరియు సాధ్యమైనంతవరకు కొనసాగటానికి వంటి",
-    "record.description.vowel-o": "సే / o / కాలం సాధ్యమైనంత "చల్లని" లో స్థిరమైన గా",
+    "record.description.vowel-a": "సే సాధ్యమైనంతవరకు \"చేసిన\" మరియు కొనసాగటానికి ఒక",
+    "record.description.vowel-e": "సే ఇ \"దుంప\" మరియు సాధ్యమైనంతవరకు కొనసాగటానికి వంటి",
+    "record.description.vowel-o": "సే o కాలం సాధ్యమైనంత \"చల్లని\" లో స్థిరమైన గా",
     "record.description.counting-normal": "1 నుండి 20 వరకు లెక్కింపు",
     "record.description.counting-fast": "వేగంగా 1 నుండి 20 కు కౌంట్",
     "record.description.done": "మీరు పాల్గొన్నందుకు ధన్యవాదాలు!",
