--- a/projects/collect/src/assets/i18n/en-US.json
+++ b/projects/collect/src/assets/i18n/en-US.json
@@ -1,4 +1,12 @@
 {
+	"language.english":"English",
+    "language.hindi":"हिन्दी",
+    "language.tamil":"தமிழ்",
+    "language.kannada":"ಕನ್ನಡ",
+    "language.marathi":"मराठी",
+    "language.malayalam":"മലയാളം",
+    "language.telugu":"తెలుగు",
+    "language.bengali":"বাংলা",
 	"app.title": "coswara",
 	"metadata.title.no_metadata": "We need some information to continue!",
 	"metadata.tabs.disclaimer": "Disclaimer",
