--- a/projects/collect/src/assets/i18n/ml-IN.json
+++ b/projects/collect/src/assets/i18n/ml-IN.json
@@ -1,4 +1,12 @@
 {
+    "language.english":"English",
+    "language.hindi":"हिन्दी",
+    "language.tamil":"தமிழ்",
+    "language.kannada":"ಕನ್ನಡ",
+    "language.marathi":"मराठी",
+    "language.malayalam":"മലയാളം",
+    "language.telugu":"తెలుగు",
+    "language.bengali":"বাংলা",
     "app.title": "ചൊസ്വര",
  "metadata.title.no_metadata": "നാം തുടരുന്നതിന് ചില വിവരങ്ങൾ കൂടി ആവശ്യമാണ്!",
  "metadata.tabs.disclaimer": "നിരാകരണം",
