--- a/projects/collect/src/assets/i18n/ta-IN.json
+++ b/projects/collect/src/assets/i18n/ta-IN.json
@@ -1,4 +1,12 @@
 {
+	"language.english":"English",
+    "language.hindi":"हिन्दी",
+    "language.tamil":"தமிழ்",
+    "language.kannada":"ಕನ್ನಡ",
+    "language.marathi":"मराठी",
+    "language.malayalam":"മലയാളം",
+    "language.telugu":"తెలుగు",
+    "language.bengali":"বাংলা",
 	"app.title": "coswara",
 	"metadata.title.no_metadata": "நாம் தொடர சில தகவல்கள் தேவை!",
  "metadata.tabs.disclaimer": "மறுப்பு",
